testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment2.errors.txt
a.js(9,12): error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
a.js(9,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(12,12): error TS2503: Cannot find namespace 'Outer'.
a.js(12,12): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (4 errors) ====
    function Outer() {
        this.y = 2
    }
    Outer.Inner = class I {
        constructor() {
            this.x = 1
        }
    }
    /** @type {Outer} */
               ~~~~~
!!! error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
               ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var ok
    ok.y
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
               ~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var oc
    oc.x
    